--- a/src/styles.css
+++ b/src/styles.css
@@ -189,3 +189,14 @@ h5 {
     border-bottom: 1px solid #dbdbdb;
   }
 }
+
+@media print {
+  .container {
+    margin: 10px;
+    grid-template-columns: 1fr 3fr;
+  }
+  .box {
+    margin-bottom: 0px;
+    border-bottom: none;
+  }
+}
